# draco-ros2-roundtrip-git

./: .gitignore  README.md  migrate_refactor.sh  refac.md
configs/: client.profile.yaml  draco.json  hdl_graph_slam_stream.yaml  netem.profiles.yaml  server.profile.yaml
docs/: 3d_slam_setup.md  results_template.md  stream_hang_issue.md
docs/apps_legacy/: run_server.py  summarize_run.py
docs/webui/: app.py
draco-ros2-roundtrip/: Makefile  README.md  qos_override.yaml  requirements.txt
draco-ros2-roundtrip/apps/: run_client.py
draco-ros2-roundtrip/configs/: ros_topics.yaml  rtabmap_stream.yaml
draco-ros2-roundtrip/data/: bag_to_ply.py  encode_ply_to_draco.py
draco-ros2-roundtrip/docs/: HOWTO.md
draco-ros2-roundtrip/launch/: hdl_graph_slam_stream.launch.py  rtabmap_stream.launch.py
draco-ros2-roundtrip/scripts/: ddscycle.sh  pcd_diff_monitor.py  replay_decoded_ply.py  replay_ply_pairs.py  replay_with_monitor.py  run_client.sh  run_server.sh  stream_client.py  stream_client_live.py  stream_server.py
ros2_ws/src/draco_roundtrip/: package.xml  setup.cfg  setup.py
ros2_ws/src/draco_roundtrip/draco_roundtrip/cli/: __init__.py  monitor.py  (+3 more)
ros2_ws/src/draco_roundtrip/resource/: draco_roundtrip
ros2_ws/src/draco_tools/: package.xml  setup.cfg  setup.py
ros2_ws/src/draco_tools/draco_tools/: __init__.py  bag_to_ply.py  offline_pipeline.py
ros2_ws/src/draco_tools/resource/: draco_tools
ros2_ws/src/slam_stream_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/slam_stream_bridge/resource/: slam_stream_bridge
scripts/: netem_apply.sh  summarize.sh
(+17 files in other folders)
