<?xml version="1.0"?>
<package format="3">
  <name>slam_stream_bridge</name>
  <version>0.1.0</version>
  <description>Launch files bridging SLAM pipelines with Draco streaming utilities.</description>
  <maintainer email="ppakdone@gmail.com">GodokSa</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
